implemeted the map from mapbox, wokring on adding the markers

--- a/fare-dash-nyc/src/Explore.css
+++ b/fare-dash-nyc/src/Explore.css
@@ -1,11 +1,11 @@
 
-.container {
+/* .container {
 
     display: flex;
-    /* align-items: center; */
+  
    justify-content: center;
-}
-.station-form{
+}  */
+/* .station-form{
     border-right: 2px solid rgb(0, 0, 0);
     
-}
+} */
