--- a/fare-dash-nyc/src/HomePage.css
+++ b/fare-dash-nyc/src/HomePage.css
@@ -29,8 +29,15 @@ margin: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
+   
 }
 .facts p {
     width: 380px;
     margin-left: 30px;
+}
+.facts-text{
+
+    display: flex;
+    flex-direction: column;
+    /* padding-bottom: 15px; */
 }
