--- a/fare-dash-nyc/src/HomePage.css
+++ b/fare-dash-nyc/src/HomePage.css
@@ -39,5 +39,13 @@ margin: 100px;
 
     display: flex;
     flex-direction: column;
+    margin-bottom: 100px;
     /* padding-bottom: 15px; */
 }
+.stats {
+    display: flex;
+    justify-content: space-around;
+  
+    margin-bottom: 150px;
+   
+} 
