--- a/fare-dash-nyc/src/Map.css
+++ b/fare-dash-nyc/src/Map.css
@@ -1,5 +1,11 @@
 .map-container {
-    width:800px ;
-    height: 400px;
+    width:900px ;
+    height: 800px;
   }
   
+  @media screen and (max-width: 1000px) {
+
+    .map-container{
+      height: 300px;
+    }
+  }
