--- a/fare-dash-nyc/src/Styles/HomePage.css
+++ b/fare-dash-nyc/src/Styles/HomePage.css
@@ -49,3 +49,16 @@ margin: 100px;
     margin-bottom: 150px;
    
 } 
+@media screen and (max-width: 900px) {
+.carousel{
+    display: none;
+}
+}
+@media screen and (max-width: 1060px) {
+.facts{
+    display: flex;
+    flex-direction: column;
+}
+}
+
+
