--- a/fare-dash-nyc/src/Navbar.css
+++ b/fare-dash-nyc/src/Navbar.css
@@ -2,7 +2,7 @@
 
     display: flex;
 
-    border-bottom: 2px black solid;
+    /* border-bottom: 2px black solid; */
 }
 .fare {
     color: #003AA4;
