--- a/fare-dash-nyc/src/App.css
+++ b/fare-dash-nyc/src/App.css
@@ -1,59 +1,9 @@
-
-* {
-	margin: 0;
-	padding: 0;
-  background-color: #fcfdfe;
-}
-
-.navbar {
+.App {
+	text-align: center;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	position: sticky;
-	top: 0;
-	cursor: pointer;
-}
-
-.nav-list {
-	width: 70%;
-	display: flex;
-	align-items: center;
-}
-
-.nav-list li {
-	list-style: none;
-	padding: 26px 30px;
-}
-
-.nav-list li a {
-	text-decoration: none;
-	color: #000;
-}
-
-.nav-list li a:hover {
-	color: grey;
-}
-
-.rightnav {
-	width: 30%;
-	text-align: right;
-}
-
-#search {
-	padding: 5px;
-	font-size: 17px;
-	border: 2px solid rgb(23, 14, 179);
-	border-radius: 9px;
-}
-
-.btn {
-margin-left: 20px;
-height: 33px;
-width: 70px;
-	color: #fff;
-background-color: rgb(31, 58, 210);
-	cursor: pointer;
-}
-
-
-
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  }
+  
+ 
