--- a/fare-dash-nyc/src/Navbar.css
+++ b/fare-dash-nyc/src/Navbar.css
@@ -1,81 +1,102 @@
-*,
-*::after,
-*::before {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+* {
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-html {
-  font-size: 62.5%;
-}
-body {
-  font-size: 1.6rem;
-}
-li {
-  list-style: none;
-}
+
 a {
   text-decoration: none;
-  color: rgb(90, 92, 8);
+}
+li {
+  list-style-type: none;
+}
+.navbar {
+    /* position: absolute; */
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 7vh;
+  box-shadow: rgba(50, 50, 93, 0.23) 0px 30px 30px -20px;
+
+  /*box-shadow: rgba(50, 50, 93, 0.23) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;*/
+}
+.logo {
+  font-size: 30px;
+}
+.nav-links {
+  display: flex;
+  justify-content: flex-end;
+  width: 75%;
 }
 
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 6vh;
-  background: rgb(255, 255, 255);
+.nav-links li {
+  color: black;
+  font-size: 20px;
+  padding: 0px 20px;
+  margin: 0px 5px;
+  cursor: pointer;
+  text-transform: capitalize;
 }
-.nav__brand {
-  text-transform: uppercase;
+.hero {
+  text-align: center;
+  margin-top: 15%;
 }
-
-.nav__menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  gap: 3rem;
+.hero h1 {
+  text-align: center;
+  font-size: 80px;
 }
-.nav__toggler {
+.mobile-menu-icon {
   display: none;
 }
-.nav__toggler div {
-  width: 2.5rem;
-  height: 0.2rem;
-  margin: 0.4rem;
-  background: rgb(223, 192, 20);
-  transition: 0.3s ease-in;
+button {
+  border: none;
+  text-decoration: none;
+  font-size: 20px;
+  background: none;
 }
-
-@media screen and (max-width: 768px) {
-  .nav__toggler {
+@media (max-width: 768px) {
+    .navbar{
+        /* position: absolute; */
+        left: 0px;
+        top: 0px;
+        z-index: 2;
+    }
+  .logo {
+    display: flex;
+    position: absolute;
+    top: 15px;
+    left: 35px;
+  }
+  .nav-links {
+    display: none;
+  }
+  .nav-links-mobile {
+    position: absolute;
     display: block;
-    cursor: pointer;
+    list-style: none;
+    box-shadow: rgba(50, 50, 93, 0.23) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    left: 0;
+    top: 10%;
+    transition: all 0.5s ease-in-out;
+    width: 100%;
+    background-color: white;
   }
-  .nav__menu {
-    position: fixed;
-    top: 7vh;
-    right: 0;
-    height: 93vh;
-    width: 40vw;
-    background: rgb(247, 247, 247);
-    flex-direction: column;
-    transform: translateX(100%);
-    transition: 0.5s ease-in;
+  ul li {
+    padding: 32px;
+    width: 100%;
+    transition: all 0.5s ease-in-out;
+    text-align: center;
   }
-}
-/* Active Class */
-.nav__active {
-  transform: translateX(0%);
+  .mobile-menu-icon {
+    position: absolute;
+    display: block;
+    right: 20px;
+  }
+  .hero h1 {
+    font-size: 50px;
+  }
 }
 
-/* Toggle Icon Animation */
-
-.toggle .line1 {
-  transform: rotate(-45deg) translate(-4px, 5px);
-}
-.toggle .line2 {
-  opacity: 0;
-}
-.toggle .line3 {
-  transform: rotate(45deg) translate(-4px, -5px);
-}
