--- a/fare-dash-nyc/src/Styles/index.css
+++ b/fare-dash-nyc/src/Styles/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,29 +7,29 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* background-image: url("https://www.intelligenttransport.com/wp-content/uploads/New-York-subway-1-750x450.jpg"); */
   /* background-repeat: no-repeat; */
-  background-size: cover;
-}
+  /* background-size: cover; */
+/* } */ 
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
-form{
-  display: flex;
+/* form{
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   /* resize: both; */
   /* overflow: auto; */
   /* opacity: 0.9; */
   /* border: 5px solid rgb(15, 9, 9); */
   /* width: 700px;
   height: 700px; */
-  background-color: white;
-  display: grid;
+  /* background-color: white;
+  display: grid; */
   /* place-content: center; */
   /* position: relative; */
   /* left: 350px; */
   /* top: 50px; */
-  }
+  /* } */ 
