--- a/fare-dash-nyc/src/Explore.css
+++ b/fare-dash-nyc/src/Explore.css
@@ -7,16 +7,10 @@
    justify-content: center; 
     
 }   
-/* 
- 
-.report-container{
-     width: 30vw;
-     height: 100vh;
-  
+.reports{
+  display: flex;
+  flex-direction: column;
 }
-.search-station{
-    border: 1px solid black;
-} */
 
 /* On screens that are 992px or less, set the background color to blue */
 @media screen and (max-width: 1000px) {
