--- a/fare-dash-nyc/src/Map.css
+++ b/fare-dash-nyc/src/Map.css
@@ -1,11 +1,3 @@
-.map-container {
-    width:700px ;
-    height: 700px;
-  }
-  
-  @media screen and (max-width: 1000px) {
-
-    .map-container{
-      height: 300px;
-    }
-  }
+.modal{
+  background-color: rgb(4, 255, 0);
+}
