--- a/fare-dash-nyc/src/SignUp.css
+++ b/fare-dash-nyc/src/SignUp.css
@@ -1,4 +1,5 @@
- .forms{
+
+.forms{
      width: 100%;
      height: 100vh;
      background-image: url('https://media.istockphoto.com/photos/panoramic-view-of-manhattan-skyscrapers-at-night-at-christmas-from-picture-id1153849876?k=20&m=1153849876&s=612x612&w=0&h=j72ZaY-Tq812vGLiMx7WQR0VTo8InO-RfqKTMcn5jfo=');
@@ -39,15 +40,15 @@ position: relative;
      background-color: transparent;
      
  }
- .sign-up h1{
-     font-size: 4rem;
-     padding-left: 60px;
+ .dash-account{
+     font-size: 3rem;
+     /* padding-left: 3px; */
  }
  .sign-up h5{
   
      
-    font-size: 2rem;
-    padding-left: 60px;
+    font-size: 1rem;
+    /* padding-left: 60px; */
 }
 .link{
     display: flex;
@@ -58,6 +59,9 @@ position: relative;
    
     height: 35px;
     width: 200px;
+    border: 1px white solid;
+    background-color: white;
+    color: black;
     border-radius: 20px;
     margin-top: 25px;
     margin-left: 90px;
