--- a/fare-dash-nyc/src/App.css
+++ b/fare-dash-nyc/src/App.css
@@ -4,5 +4,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
+}
+
+.main-container {
+  background-color: black;
 }
 
