--- a/fare-dash-nyc/src/Explore.css
+++ b/fare-dash-nyc/src/Explore.css
@@ -1,15 +1,34 @@
-
+*{
+  margin: 0;
+  padding: 0;
+}
 
 
 .container {
   display: flex;
   justify-content: center;
   flex-direction: row;
+  width: 100%;
   justify-content: space-between;
+  background-color: rgb(0, 0, 0);
+  
+}
+.time{
+  color: brown;
 }
 
-
+.name {
+  color: rgb(252, 252, 207);
+}
  
+.incident {
+  color: antiquewhite;
+}
+
+.details{
+  color: rgb(124, 115, 100);
+}
+
 .report-card{
   border: 3px solid rgb(201, 106, 17);
   border-radius: 5px;
@@ -20,6 +39,7 @@
 .search-reports{
   padding: 10px;
   font-size: 20px;
+  color: azure;
 
 }
 
