--- a/fare-dash-nyc/src/Navbar.css
+++ b/fare-dash-nyc/src/Navbar.css
@@ -17,10 +17,11 @@ li {
 
   display: flex;
   justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  height: 7vh;
-  background-color: rgb(250, 250, 250);
-  box-shadow: rgba(50, 50, 93, 0.23) 0px 30px 30px -20px;
+  height: 8vh;
+  background-color: rgb(3, 3, 3);
+  box-shadow: rgba(0, 0, 0, 0.23) 0px 30px 30px -20px;
 
   /*box-shadow: rgba(50, 50, 93, 0.23) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;*/
 }
@@ -34,8 +35,8 @@ li {
 }
 
 .nav-links li {
-  color: black;
-  font-size: 20px;
+  color: rgb(255, 255, 255);
+  font-size: 17px;
   padding: 0px 20px;
   margin: 0px 5px;
   cursor: pointer;
@@ -47,7 +48,7 @@ li {
 }
 .hero h1 {
   text-align: center;
-  font-size: 80px;
+  font-size: 70px;
 }
 .mobile-menu-icon {
   display: none;
