--- a/fare-dash-nyc/src/Login.css
+++ b/fare-dash-nyc/src/Login.css
@@ -1,7 +1,7 @@
 .form-sec{
     width: 100%;
     height: 100vh;
-    background-image: url('https://media.istockphoto.com/photos/panoramic-view-of-manhattan-skyscrapers-at-night-at-christmas-from-picture-id1153849876?k=20&m=1153849876&s=612x612&w=0&h=j72ZaY-Tq812vGLiMx7WQR0VTo8InO-RfqKTMcn5jfo=');
+    background-image: url('https://theinsatiabletraveler.com/wp-content/uploads/2015/07/Where-to-Photograph-the-Most-Stunning-Views-of-the-New-York-Skyline-at-Night-Brooklyn-Bridge-Park-5323.jpg');
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
@@ -49,19 +49,24 @@ position: relative;
     height:40px ;
     background-color: transparent;
 }
+
 .login button{
     font-size: 15px;
     margin-top: 30px;
     height: 35px;
     width: 120px;
+    border: none;
     border-radius: 20px;
     margin-left: 90px;
     background-color: white;
     color: black;
 
 }
+.login button:hover {
+    background-color:#0140A9;
+}
 .login a{
-    color: blue;
+    color: yellow;
 }
 .login h5 {
     padding-top: 20px;
