--- a/fare-dash-nyc/src/SignUp.css
+++ b/fare-dash-nyc/src/SignUp.css
@@ -2,7 +2,7 @@
 .forms{
      width: 100%;
      height: 100vh;
-     background-image: url('https://media.istockphoto.com/photos/panoramic-view-of-manhattan-skyscrapers-at-night-at-christmas-from-picture-id1153849876?k=20&m=1153849876&s=612x612&w=0&h=j72ZaY-Tq812vGLiMx7WQR0VTo8InO-RfqKTMcn5jfo=');
+     background-image: url('https://theinsatiabletraveler.com/wp-content/uploads/2015/07/Where-to-Photograph-the-Most-Stunning-Views-of-the-New-York-Skyline-at-Night-Brooklyn-Bridge-Park-5323.jpg');
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
@@ -66,8 +66,12 @@ position: relative;
     margin-top: 25px;
     margin-left: 90px;
 }
+.sign-up button:hover{
+    background-color:#0a2bff;
+    border: none;
+}
 .sign-up a{
-    color: blue;
+    color: yellow;
 }
 .sign-up input{
     background-color: transparent;
