--- a/fare-dash-nyc/src/Map.css
+++ b/fare-dash-nyc/src/Map.css
@@ -3,15 +3,18 @@
   background-color: rgb(4, 255, 0);
 }
 
-.map-container {
+.map {
     width: 100vw ;
     height: 90vh;
+      position:sticky;
+  overflow-x:hidden;
   }
   
   @media screen and (max-width: 1000px) {
 
-    .map-container{
-      height: 300px;
+    .map{
+      height: 100vh;
+      width: 95vw;
     }
   }
 
