--- a/fare-dash-nyc/src/Explore.css
+++ b/fare-dash-nyc/src/Explore.css
@@ -8,15 +8,20 @@
   display: flex;
   justify-content: center;
   flex-direction: row;
-  width: 100%;
+  width: 100vw;
   justify-content: space-between;
   background-color: rgb(0, 0, 0);
-  
+  /* position:fixed;
+  overflow-y:scroll;
+  overflow-x:hidden; */
 }
 .time{
   color: brown;
 }
 
+.map2 {
+  position: fixed;
+}
 .name {
   color: rgb(252, 252, 207);
 }
@@ -36,6 +41,7 @@
   padding: 10px;
 }
 
+
 .search-reports{
   padding: 10px;
   font-size: 20px;
@@ -50,8 +56,8 @@
     flex-direction: column;
     z-index: -2;
   }
-  .report-container {
-    width: 100vw;
+  .reports {
+    width: 90vw;
     height: 100vh;
   }
 }
