--- a/fare-dash-nyc/src/Navbar.css
+++ b/fare-dash-nyc/src/Navbar.css
@@ -84,13 +84,14 @@ button {
     top: 10%;
     transition: all 0.5s ease-in-out;
     width: 100%;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
   }
   ul li {
     padding: 32px;
     width: 100%;
     transition: all 0.5s ease-in-out;
     text-align: center;
+    color: rgb(255, 255, 255);
   }
   .mobile-menu-icon {
     position: absolute;
