--- a/fare-dash-nyc/src/Map.css
+++ b/fare-dash-nyc/src/Map.css
@@ -1,7 +1,4 @@
 
-.modal{
-  background-color: rgb(4, 255, 0);
-}
 
 .map {
     width: 100vw ;
@@ -9,7 +6,16 @@
       position:sticky;
   overflow-x:hidden;
   }
-  
+ .popup-name{
+   color: black;
+   font-size: 25px;
+   text-align: center;
+ }
+ .popup-line{
+color: #000;
+font-weight: bold;
+text-align: center;
+ }
   @media screen and (max-width: 1000px) {
 
     .map{
