--- a/fare-dash-nyc/src/Login.css
+++ b/fare-dash-nyc/src/Login.css
@@ -58,7 +58,7 @@ position: relative;
     border: none;
     border-radius: 20px;
     margin-left: 90px;
-    background-color: white;
+    background-color: rgb(247, 49, 0);
     color: black;
 
 }
