--- a/fare-dash-nyc/src/Navbar.css
+++ b/fare-dash-nyc/src/Navbar.css
@@ -42,6 +42,9 @@ li {
   cursor: pointer;
   text-transform: capitalize;
 }
+.nav__item:hover {
+  color: #EA330B;
+}
 .hero {
   text-align: center;
   margin-top: 15%;
