--- a/fare-dash-nyc/src/HomePage.css
+++ b/fare-dash-nyc/src/HomePage.css
@@ -1,29 +1,23 @@
 .bg-img{
 
-    -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
-    filter: blur(3px);
+    /* -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+    /* filter: blur(3px); */ 
  
   background-repeat: no-repeat;
 
   width: 100vw;
   height: 700px;
-  
-
-
-  
 } 
 .top-container{
-    margin-bottom: 150px;
+    margin-bottom: 70px;
 }
 
 .mission h1 {
-
     position: absolute;
    background-color: transparent;
    color: white;
     top: 30%;
-    left: 31%;
-   
+    left: 28%;
     transform: translate(-50%, -50%); 
 }
 .mission p{
