--- a/fare-dash-nyc/src/Map.css
+++ b/fare-dash-nyc/src/Map.css
@@ -7,12 +7,15 @@
   overflow-x:hidden;
   }
  .popup-name{
-   color: black;
-   font-size: 25px;
+   color: white;
+   font-size: 20px;
    text-align: center;
  }
+ .popup-modal .leaflet-popup-content-wrapper{
+background-color: black;
+ }
  .popup-line{
-color: #000;
+color: white;
 font-weight: bold;
 text-align: center;
  }
