--- a/fare-dash-nyc/src/Explore.css
+++ b/fare-dash-nyc/src/Explore.css
@@ -6,12 +6,22 @@
 .container {
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   width: 100vw;
   background-color: rgb(0, 0, 0);
   /* position:fixed;
   overflow-y:scroll;
   overflow-x:hidden; */
+}
+
+.top-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  margin-bottom: 0;
+  margin-top: 20px;
+  /* width: 100vw; */
+  background-color: rgb(0, 0, 0);
 }
 .time {
   color: brown;
@@ -38,11 +48,12 @@
   border-radius: 5px;
   margin: 10;
   padding: 10px;
-  width: 25vw;
+  /* width: 25vw; */
 }
 
 
 .search-reports {
+  text-align: center;
   padding: 10px;
   font-size: 20px;
   color: azure;
@@ -55,7 +66,15 @@
     flex-direction: column;
     z-index: -2;
   }
+
+  .top-container{
+    display: flex;
+    flex-direction: column;
+  }
   .reports {
+    width: 90vw;
+  }
+  .bottom-container {
     width: 90vw;
   }
 }
