--- a/fare-dash-nyc/src/Navbar.css
+++ b/fare-dash-nyc/src/Navbar.css
@@ -19,7 +19,7 @@ li {
   justify-content: space-around;
   justify-content: center;
   align-items: center;
-  height: 6vh;
+  height: 7vh;
   background-color: rgb(3, 3, 3);
   box-shadow: rgba(0, 0, 0, 0.23) 0px 30px 30px -20px;
 
@@ -40,7 +40,7 @@ li {
 .nav-links li {
   color: rgb(255, 255, 255);
   font-size: 17px;
-  padding: 0px 20px;
+  padding: 10px 20px 0px 0px;
   margin: 0px 5px;
   cursor: pointer;
   text-transform: capitalize;
