--- a/fare-dash-nyc/src/Login.css
+++ b/fare-dash-nyc/src/Login.css
@@ -17,7 +17,7 @@ position: relative;
     top: 0;
      width: 100%;
      height: 100vh;
-     padding-top: 7rem;
+     padding-top: 10rem;
      padding-left: 8rem;
      background-image: linear-gradient(to right, 
    
@@ -58,12 +58,12 @@ position: relative;
     border: none;
     border-radius: 20px;
     margin-left: 90px;
-    background-color: rgb(247, 49, 0);
+    background-color: white;
     color: black;
 
 }
 .login button:hover {
-    background-color:#0140A9;
+    background-color:rgb(247, 49, 0);
 }
 .login a{
     color: yellow;
