--- a/fare-dash-nyc/src/SignUp.css
+++ b/fare-dash-nyc/src/SignUp.css
@@ -21,7 +21,7 @@ position: relative;
      top: 0;
      width: 100%;
      height: 100vh;
-     padding-top: 7rem;
+     padding-top: 12rem;
      padding-left: 8rem;
      background-image: linear-gradient(to right, 
    
@@ -59,14 +59,14 @@ position: relative;
    
     height: 35px;
     width: 200px;
-    background-color: rgb(247, 49, 0);
+    background-color: white;
     color: black;
     border-radius: 20px;
     margin-top: 25px;
     margin-left: 90px;
 }
 .sign-up button:hover{
-    background-color:#0a2bff;
+    background-color:rgb(247, 49, 0);
     border: none;
 }
 .sign-up a{
