--- a/fare-dash-nyc/src/Explore.css
+++ b/fare-dash-nyc/src/Explore.css
@@ -51,6 +51,14 @@
   /* width: 25vw; */
 }
 
+.report-card-2 {
+  border: 2px solid rgb(117, 110, 0);
+  border-radius: 5px;
+  margin: 10;
+  padding: 10px;
+  /* width: 25vw; */
+}
+
 
 .search-reports {
   text-align: center;
