--- a/fare-dash-nyc/src/HomePage.css
+++ b/fare-dash-nyc/src/HomePage.css
@@ -1,9 +1,8 @@
 
-.top{
+.top-home{
   margin-top: 100px;
   padding-bottom: 50px;
   display: flex;
-
   align-items: center;
   justify-content: space-between;
 }
@@ -53,9 +52,10 @@ border-radius: 3px;
     left:10%;
 
 }
-.container{
+.container-home{
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .img{
   width: 500px;
